tests/lime/fail/tokens/macro_rest/byte_36.wsa
macro m$ [push 36] m$
